# ESP-Remote-Logger

./: README.md
1. Hardware/: .gitignore  README.md
1. Hardware/V1.0-1.19/: ESP-Logger.PrjPcb
1.Hardware/V1.0-1.19/: main.PcbDoc  main.SchDoc
1.Hardware/V2.0/: ESP-Logger.PrjPcb  gen1.PcbDoc  gen2.PcbDoc  main.SchDoc
2. Firmware/: README.md
2. Firmware/ESP-Remote-Logger/: .gitignore  Message.xmind
2. Firmware/ESP-Remote-Logger/include/: can.h  message.h  network.h  sd_card.h
2. Firmware/ESP-Remote-Logger/lib/TFT_eSPI/: User_Setup_Select.h
2. Firmware/ESP-Remote-Logger/lib/TFT_eSPI/User_Setups/: Setup2_ST7735.h
2. Firmware/ESP-Remote-Logger/src/: main.cpp  message.cpp  network.cpp
2.Firmware/ESP-Remote-Logger/: Message.xmind  Network.xmind  platformio.ini
2.Firmware/ESP-Remote-Logger/include/: can.h  message.h  network.h  password.h
2.Firmware/ESP-Remote-Logger/lib/ESP32-Arduino-CAN/: CAN.c  CAN.h  ESP32CAN.cpp  ESP32CAN.h
2.Firmware/ESP-Remote-Logger/lib/TFT_eSPI/: User_Setup.h
2.Firmware/ESP-Remote-Logger/lib/TFT_eSPI/User_Setups/: Setup9_ST7735_Overlap.h
2.Firmware/ESP-Remote-Logger/src/: can.cpp  main.cpp  network.cpp  sd_card.cpp
3. Software/: CMakeLists.txt
3.Software/: .gitignore  CMakeLists.txt  Config.h  main.cpp
3.Software/ConnectionPage/: Connection.cpp  Connection.h  Connection.ui  connection.cpp  connection.h  connection.ui
3.Software/DataPage/: Dashboard.cpp  Dashboard.h  Dashboard.ui
3.Software/NetDataHandler/: DataHandler.cpp  DataHandler.h
3.Software/asset/: resource.qrc
